# hse_ts_course

./: .gitignore  .gitmodules  README.md  pyproject.toml  sandbox.ipynb
2020-fall/additional_materials/: 3670176526.xls
2020-fall/homeworks-practice/: hw_data_bad.xlsx
2020-fall/midterm/: solution.tex
2020-fall/seminars/: Untitled.ipynb  sem_1.ipynb  sem_10.ipynb  sem_3.ipynb  sem_4.ipynb  sem_5.ipynb  sem_6.ipynb  sem_7.ipynb  sem_8.ipynb  sem_9.ipynb  sem_k.ipynb  setar_model.py
2021-spring/final/: final.tex
2021-spring/midterm/: solution.tex
2021-spring/seminars/: sem_1.ipynb  sem_10_1.ipynb  sem_11.ipynb  sem_12_1.ipynb  sem_12_2.ipynb  sem_14.ipynb  sem_14_1.ipynb  sem_16.ipynb  sem_2.ipynb  sem_3.ipynb  sem_4.ipynb  sem_5.ipynb  sem_7.ipynb  sem_9.ipynb
2022-spring/homework-theory/: hw.tex
2022-spring/midterm/: midterm.tex
2022-spring/seminars/: sem_1.ipynb  sem_10_2.ipynb  sem_12_2.ipynb  sem_16.ipynb  sem_2.ipynb  sem_5.ipynb  sem_7.ipynb  sem_8.ipynb
2023-spring/: sem_1.ipynb
2023-spring/catboost_info/: learn_error.tsv  time_left.tsv
2023-spring/exam/: final.tex  final_retake.tex
2023-spring/midterm/: midterm.tex
2023-spring/seminars/: sem_0.ipynb  sem_02.ipynb  sem_07.ipynb  sem_1.ipynb  sem_10_1.ipynb  sem_10_2.ipynb  sem_11.ipynb  sem_12.ipynb  sem_13.ipynb  sem_15.ipynb  sem_16_02.ipynb  sem_17.ipynb  sem_2.ipynb  sem_4.ipynb  sem_5.ipynb  sem_6.ipynb
2024-spring/final/: final.tex
2024-spring/lectures/: lecture_03_ETS.tex  sem_01_intro.tex
2024-spring/midterm/: midterm.tex  midterm_v2.tex
2024-spring/seminars/: sem_00.ipynb  sem_01.ipynb  sem_01_intro.ipynb  sem_01_intro.tex  sem_02_tables.tex  sem_03_ETS.ipynb  sem_04_approach.ipynb  sem_05_example.ipynb  sem_11_var.R  sem_11_var.ipynb  sem_12_1.ipynb  sem_12_2.ipynb  sem_13.ipynb  sem_14.ipynb  sem_16_lstm.ipynb  sem_18_classification.ipynb  spain_energy_direct.ipynb
2025-spring/midterm/: midterm.tex  solution.tex
2025-spring/seminars/: sem_00_recap.ipynb  sem_01_intro.ipynb  sem_03_ETS.ipynb  seminar_01_custom_dateutil.py  seminar_04_ets.ipynb  seminar_05_testing.ipynb  seminar_09_arima.ipynb  seminar_10_var.ipynb  seminar_12_data.ipynb  seminar_12_risk.ipynb  seminar_13.ipynb  seminar_13_garch.ipynb  seminar_16_lstm.ipynb  (+3 more)
utils/: parse_atm.py
(+126 files in other folders)
