[tool.poetry]
name = "hse-ts-course"
version = "0.1.0"
description = ""
authors = ["Matvei Zekhov <zehov1@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
statsforecast = "^2.0.0"
pandas = "^2.2.3"
numpy = "2.1"
ipykernel = "^6.29.5"
statsmodels = "^0.14.4"
matplotlib = "^3.10.0"
moepy = "^1.1.4"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
